--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "express": "3.0.6",
     "q": "0.8.12",
     "promised-io": "0.3.3",
-    "mongodb": "x.x.x",
+    "mongodb": "1.1.11",
     "mongoose": "x.x.x"
   },
   "engines": {
